--- a/fot_mail_track/pubspec.yaml
+++ b/fot_mail_track/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.6
+  qr_code_scanner: ^1.0.1
+  provider: ^6.1.2
+  mongo_dart: ^0.10.0
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # The following adds the Cupertino Icons font to your applicatio^1.0.8# Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
