--- a/fot_mail_track/pubspec.yaml
+++ b/fot_mail_track/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your applicatio^1.0.8# Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_dotenv: ^5.1.0
+  mobile_scanner: ^5.1.1
 
 dev_dependencies:
   flutter_test:
