--- a/fot_mail_track/pubspec.yaml
+++ b/fot_mail_track/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_dotenv: ^5.1.0
   mobile_scanner: ^5.1.1
+  qr_flutter: ^4.1.0
+  qr_scanner: ^0.0.2-259.9.beta
+  toast: ^0.3.0
 
 dev_dependencies:
   flutter_test:
