8-02-24-succesfull-Error-solved

--- a/fot_mail_track/.env
+++ b/fot_mail_track/.env
@@ -1,1 +1,2 @@
-MONGO_DB_URI=mongodb+srv://Fotmailtrack:Um2QzDnY6THqY8fh@cluster0.t73j6fx.mongodb.net/mailTrackingDB?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URI=mongodb+srv://Fotmailtrack:@cluster0.t73j6fx.mongodb.net/mailTrackingDB?retryWrites=true&w=majority&appName=Cluster0
+
