--- a/fot_mail_track/backend/.env
+++ b/fot_mail_track/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://Fotmailtrack:Um2QzDnY6THqY8fh@cluster0.t73j6fx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
+JWT_SECRET = FOT-MAIL-TRACK
