--- a/fot_mail_track/pubspec.yaml
+++ b/fot_mail_track/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.6
   http: ^0.13.6
   qr_code_scanner: ^1.0.1
   provider: ^6.1.2
