--- a/fot_mail_track/pubspec.yaml
+++ b/fot_mail_track/pubspec.yaml
@@ -94,9 +94,9 @@ flutter:
         - asset: assets/fonts/EduVICWANTBeginner-Bold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Black.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
