--- a/fot_mail_track/pubspec.yaml
+++ b/fot_mail_track/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   qr_scanner: ^0.0.2-259.9.beta
   toast: ^0.3.0
   google_fonts: ^4.0.4
+  intl: ^0.19.0
   # google_fonts: ^4.0.4
 
 dev_dependencies:
