--- a/fot_mail_track/pubspec.yaml
+++ b/fot_mail_track/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   toast: ^0.3.0
   google_fonts: ^4.0.4
   intl: ^0.19.0
+  fluttertoast: ^8.0.9
   # google_fonts: ^4.0.4
 
 dev_dependencies:
