--- a/.github/workflows/flutter-cicd.yml
+++ b/.github/workflows/flutter-cicd.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Flutter
-      uses: subosito/flutter-action@v3  # Try using the latest version of the action
+      uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.13.0'  # Specify the latest stable Flutter version
+        flutter-version: 'stable'
 
     - name: Install dependencies
       run: flutter pub get
