--- a/.github/workflows/flutter-cicd.yml
+++ b/.github/workflows/flutter-cicd.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: 'stable'
+        flutter-version: '3.13.0'  # Specific Flutter version
 
     - name: Install dependencies
       run: flutter pub get
@@ -35,3 +35,4 @@ jobs:
       with:
         name: FMT-APP-APK
         path: build/app/outputs/flutter-apk/app-release.apk
+
