--- a/.github/workflows/flutter-cicd.yml
+++ b/.github/workflows/flutter-cicd.yml
@@ -19,20 +19,25 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.13.0'  # Specific Flutter version
+        flutter-version: '3.13.0'
 
     - name: Install dependencies
       run: flutter pub get
+      working-directory: ./fot_mail_track# Ensure the correct project path here
 
     - name: Run unit tests
       run: flutter test
+      working-directory: ./fot_mail_track # Ensure the correct project path here
 
     - name: Build APK
       run: flutter build apk --release
+      working-directory: ./fot_mail_track # Ensure the correct project path here
 
     - name: Upload APK as artifact
       uses: actions/upload-artifact@v3
       with:
         name: FMT-APP-APK
         path: build/app/outputs/flutter-apk/app-release.apk
+      working-directory: ./fot_mail_track # Ensure the correct project path here
+
 
