--- a/.github/workflows/flutter-cicd.yml
+++ b/.github/workflows/flutter-cicd.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.13.0' # Use a Flutter version that includes Dart SDK >= 3.2.3
+        flutter-version: '3.13.0'  # Specify a compatible Flutter version
 
     - name: Verify Flutter and Dart version
       run: |
@@ -50,3 +50,4 @@ jobs:
       with:
         name: FMT-APP-APK
         path: app-release.apk
+
