--- a/.github/workflows/flutter-cicd.yml
+++ b/.github/workflows/flutter-cicd.yml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Flutter
-      uses: subosito/flutter-action@v2
+      uses: cirruslabs/flutter-action@v2
       with:
-        flutter-version: '3.13.0'  # Specify a compatible Flutter version
+        flutter-version: '3.13.0'  # or use 'stable' for the latest version
+
 
     - name: Verify Flutter and Dart version
       run: |
