--- a/.github/workflows/flutter-cicd.yml
+++ b/.github/workflows/flutter-cicd.yml
@@ -17,12 +17,11 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Flutter
-      uses: cirruslabs/flutter-action@v2
+      uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.13.0'  # or use 'stable' for the latest version
+        flutter-version: '3.13.0'  # Use a stable version compatible with Dart SDK >=3.2.3
 
-
-    - name: Verify Flutter and Dart version
+    - name: Verify Flutter and Dart versions
       run: |
         flutter --version
         dart --version
@@ -51,4 +50,3 @@ jobs:
       with:
         name: FMT-APP-APK
         path: app-release.apk
-
