--- a/fot_mail_track/android/gradle.properties
+++ b/fot_mail_track/android/gradle.properties
@@ -2,4 +2,7 @@ org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableGlobalSynthetics=false
+systemProp.org.gradle.internal.http.socketTimeout=60000
+systemProp.org.gradle.internal.http.connectionTimeout=60000
+
 
